--- a/themes/hugo-coder/layouts/self/list.html
+++ b/themes/hugo-coder/layouts/self/list.html
@@ -3,7 +3,7 @@
 {{ end }}
 {{ define "content" }}
   <section class="container list">
-    <!-- <h1 class="title">{{ .Title }} Posts</h1> -->
+    <h1 class="title" style="font-size: 1.6rem !important;border-bottom:1px dotted #bf7326;padding-bottom:20px;">{{ .Description }}</h1>
 
     <ul>
       {{- range .Paginator.Pages -}}
