--- a/themes/hugo-coder/layouts/dev/single.html
+++ b/themes/hugo-coder/layouts/dev/single.html
@@ -38,6 +38,10 @@
         {{ $outContent }}
 
         <div style="text-align: center;color: darkgray;">
+          {{ partial "share-buttons.html" . }}
+        </div>
+
+        <div style="text-align: center;color: darkgray;">
           {{ if eq .Site.Language.Lang "zh-cn" }}
           <p>本作品采用<a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" style="color: darkgray;">知识共享署名-非商业性使用-禁止演绎 4.0 国际许可协议</a>进行许可</p>
           {{ else }}
@@ -47,6 +51,7 @@
       </div>
 
       <footer>
+        {{ partial "share-buttons.html" . }}
         {{ partial "posts/series.html" . }}
         {{ partial "posts/disqus.html" . }}
         {{ partial "posts/commento.html" . }}
