add sharethis plugin

--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -239,15 +239,17 @@ a[href^="#fn:"]:after{ content: ']' }
   }
 }
 
-img {
-  display: block;
-  box-shadow: 0 0 10px #555;
-  border-radius: 6px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  -webkit-box-shadow: 0 0 10px #555;
+.article {
+  img {
+    display: block;
+    box-shadow: 0 0 10px #555;
+    border-radius: 6px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    -webkit-box-shadow: 0 0 10px #555;
+  }
 }
 
 .footer-taxonomy {
