--- a/themes/hugo-coder/layouts/money/single.html
+++ b/themes/hugo-coder/layouts/money/single.html
@@ -48,6 +48,7 @@
 
       <footer>
         {{ partial "posts/share.html" . }}
+        {{ partial "posts/subscribe.html" . }}
         {{ partial "posts/series.html" . }}
         {{ partial "posts/disqus.html" . }}
         {{ partial "posts/commento.html" . }}
