--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -22,5 +22,49 @@
       {{ end }}
     </ul>
     {{ end }}
+    {{ if eq .Site.Language.Lang "zh-cn" }}
+    <div class="dashboard">
+      <div class="pure-g">
+        <div class="pure-u-1 pure-u-md-1-2 left">
+          GitHub Stars: 534
+        </div>
+        <div class="pure-u-1 pure-u-md-1-2 right">
+          微信公众号/微信群: 2615/310
+        </div>
+      </div>
+      <div class="pure-g">
+        <div class="pure-u-1 pure-u-md-1-2 left">
+          知乎关注者: 8263
+        </div>
+        <div class="pure-u-1 pure-u-md-1-2 right">
+          Telegram: 1345
+        </div>
+      </div>
+      <div class="pure-g">
+        <div class="pure-u-1 pure-u-md-1-2 left">
+          Twitter Followers: 241
+        </div>
+        <div class="pure-u-1 pure-u-md-1-2 right">
+          YouTube: 21
+        </div>
+      </div>
+      <div class="pure-g">
+        <div class="pure-u-1 pure-u-md-1-2 left">
+          浏览器通知: 921
+        </div>
+        <div class="pure-u-1 pure-u-md-1-2 right">
+          邮件列表: 13
+        </div>
+      </div>
+      <div class="pure-g">
+        <div class="pure-u-1 pure-u-md-1-2 left">
+          网站总 PV: 140094
+        </div>
+        <div class="pure-u-1 pure-u-md-1-2 right">
+          网站运行时间: {{ div (sub now.Unix 1576540800) 86400 }} 天
+        </div>
+      </div>
+    </div>
+    {{ end }}
   </div>
 </section>
