--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -275,4 +275,12 @@ a[href^="#fn:"]:after{ content: ']' }
       text-align: center;
     }
   }
+  a {
+    text-decoration: none;
+    color: #cccccc;
+  }
+  a:hover {
+    color: #999999;
+    font-size: 15px;
+  }
 }
