add home page hit count feature

--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -61,7 +61,7 @@
           <a href="/categories/被动收入投资组合/">被动收入投资组合净值: 1.53</a>
         </div>
         <div class="pure-u-1 pure-u-md-1-2 right">
-          网站总 PV: 140094
+          <span>网站总 PV: </span><span id="all-page-views"></span>
         </div>
       </div>
       <div class="pure-g">
