--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -66,7 +66,7 @@
       </div>
       <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-2 left">
-          网站运行时间: {{ div (sub now.Unix 1576540800) 86400 }} 天
+          网站运行时间: <span id="site-run-days"></span> 天
         </div>
         <div class="pure-u-1 pure-u-md-1-2 right">
           数据更新时间: 2021.01.23
