add post /money/passive-income-protfolio/202101

--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -1,13 +1,11 @@
 <footer class="footer">
   <div class="footer-taxonomy">
     <div style="margin-bottom: 10px;">
-      <a href="https://wiki.bmpi.dev/" rel="nofollow">Wiki</a>
+      <a href="https://wiki.bmpi.dev/">Wiki</a>
       ⚔️
-      <a href="https://talk.bmpi.dev/" rel="nofollow">Talk</a>
+      <a href="https://talk.bmpi.dev/">Talk</a>
       ⚔️
-      <a href="https://www.notion.so/mdw/e0ed086e701a4d0aaa4839d2c7aa62ea" rel="nofollow">Portfolio</a>
-      ⚔️
-      <a href="https://money.i365.tech/">Money</a>
+      <a href="/invest/">Invest</a>
     </div>
     <div>
       <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
