--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -26,34 +26,34 @@
     <div class="dashboard">
       <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-2 left">
-          <a href="https://github.com/madawei2699/" rel="nofollow">GitHub Stars: 534</a>
+          <a href="https://github.com/madawei2699/" rel="nofollow">GitHub Stars: 687</a>
         </div>
         <div class="pure-u-1 pure-u-md-1-2 right">
-          <a href="https://img.bmpi.dev/755b406f-43ae-e382-e13c-547116d3e7d5.png" rel="nofollow">微信公众号/微信群: 2615/310</a>
+          <a href="https://img.bmpi.dev/755b406f-43ae-e382-e13c-547116d3e7d5.png" rel="nofollow">微信公众号/微信群: 2719/343</a>
         </div>
       </div>
       <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-2 left">
-          <a href="https://www.zhihu.com/people/improve365" rel="nofollow">知乎关注者: 8263</a>
+          <a href="https://www.zhihu.com/people/improve365" rel="nofollow">知乎关注者: 8271</a>
         </div>
         <div class="pure-u-1 pure-u-md-1-2 right">
-          <a href="https://t.me/bmpi_group" rel="nofollow">Telegram: 1345</a>
+          <a href="https://t.me/bmpi_group" rel="nofollow">Telegram: 419/352/329</a>
         </div>
       </div>
       <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-2 left">
-          <a href="https://twitter.com/madawei2699/" rel="nofollow">Twitter Followers: 241</a>
+          <a href="https://twitter.com/madawei2699/" rel="nofollow">Twitter Followers: 249</a>
         </div>
         <div class="pure-u-1 pure-u-md-1-2 right">
-          <a href="https://www.youtube.com/channel/UCbg-Y24Z1H0nONW-bxgzv6w" rel="nofollow">YouTube: 21</a>
+          <a href="https://www.youtube.com/channel/UCbg-Y24Z1H0nONW-bxgzv6w" rel="nofollow">YouTube: 25</a>
         </div>
       </div>
       <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-2 left">
-          <a href="/dev/guide-to-setup-blog-site-with-zero-cost-3/">浏览器通知: 921</a>
+          <a href="/dev/guide-to-setup-blog-site-with-zero-cost-3/">浏览器通知: 1434</a>
         </div>
         <div class="pure-u-1 pure-u-md-1-2 right">
-          <a href="https://tinyletter.com/i365" rel="nofollow">邮件列表: 13</a>
+          <a href="https://tinyletter.com/i365" rel="nofollow">邮件列表: 28</a>
         </div>
       </div>
       <div class="pure-g">
@@ -69,7 +69,7 @@
           网站运行时间: <span id="site-run-days"></span> 天
         </div>
         <div class="pure-u-1 pure-u-md-1-2 right">
-          数据更新时间: 2021.01.23
+          数据更新时间: 2021.02.02
         </div>
       </div>
     </div>
