--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -4,7 +4,7 @@
       <div class="avatar"><img src="{{ . | relURL }}" alt="马大伟"></div>
     {{ end }}
     <h1>{{ .Site.Params.author }}</h1>
-    <h2>{{ .Site.Params.info }}</h2>
+    <h2>{{ .Site.Params.info1 }}<br>{{ .Site.Params.info2 }}<br>{{ .Site.Params.info3 }}</h2>
     {{ with .Site.Params.social }}
     <ul class="about-social">
       {{ range sort .}}
