--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -22,6 +22,13 @@
   {{ template "_internal/twitter_cards.html" . }}
   {{ template "_internal/opengraph.html" . }}
 
+  {{ if .Params.og_image }}
+  <meta property="og:image" content="{{ .Params.og_image }}" />
+  {{ else }}
+  {{ with .Site.Params.og_image }}
+  <meta name="og:image" content="{{ . }}">{{ end }}
+  {{ end }}
+
   {{ partial "schema.html" . }}
 
   {{ if .Permalink }}
