fix og image base url error

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -28,8 +28,7 @@
   {{ if .Params.og_image }}
   <meta property="twitter:image" content="{{ .Params.og_image }}" />
   {{ else }}
-  {{ with .Site.Params.og_image }}
-  <meta name="twitter:image" content="{{ . }}">{{ end }}
+  <meta name="twitter:image" content="{{ .Site.BaseURL }}{{ .Site.Params.og_image }}">
   {{ end }}
 
   <!-- Open Graph -->
@@ -37,8 +36,7 @@
   {{ if .Params.og_image }}
   <meta property="og:image" content="{{ .Params.og_image }}" />
   {{ else }}
-  {{ with .Site.Params.og_image }}
-  <meta name="og:image" content="{{ . }}">{{ end }}
+  <meta name="twitter:image" content="{{ .Site.BaseURL }}{{ .Site.Params.og_image }}">
   {{ end }}
 
   {{ partial "schema.html" . }}
