--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -26,50 +26,22 @@
     <div class="dashboard">
       <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-2 left">
-          <a href="https://github.com/madawei2699/" rel="nofollow">GitHub Stars: 787</a>
+          共 {{ len .Site.RegularPages }} 篇文章
         </div>
         <div class="pure-u-1 pure-u-md-1-2 right">
-          <a href="https://img.bmpi.dev/755b406f-43ae-e382-e13c-547116d3e7d5.png" rel="nofollow">微信公众号/微信群: 2758/347</a>
+          {{$scratch := newScratch}}
+          {{ range .Site.RegularPages }}
+              {{$scratch.Add "total" (countwords .Content)}}
+          {{ end }}
+          总计 {{$scratch.Get "total" }} 字
         </div>
       </div>
       <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-2 left">
-          <a href="https://www.zhihu.com/people/improve365" rel="nofollow">知乎关注者: 8268</a>
-        </div>
-        <div class="pure-u-1 pure-u-md-1-2 right">
-          <a href="https://t.me/bmpi_group" rel="nofollow">Telegram: 427/355/340</a>
-        </div>
-      </div>
-      <div class="pure-g">
-        <div class="pure-u-1 pure-u-md-1-2 left">
-          <a href="https://twitter.com/madawei2699/" rel="nofollow">Twitter Followers: 271</a>
-        </div>
-        <div class="pure-u-1 pure-u-md-1-2 right">
-          <a href="https://www.youtube.com/channel/UCbg-Y24Z1H0nONW-bxgzv6w" rel="nofollow">YouTube: 28</a>
-        </div>
-      </div>
-      <div class="pure-g">
-        <div class="pure-u-1 pure-u-md-1-2 left">
-          <a href="/dev/guide-to-setup-blog-site-with-zero-cost-3/">浏览器通知: 1502</a>
-        </div>
-        <div class="pure-u-1 pure-u-md-1-2 right">
-          <a href="https://tinyletter.com/i365" rel="nofollow">邮件列表: 42</a>
-        </div>
-      </div>
-      <div class="pure-g">
-        <div class="pure-u-1 pure-u-md-1-2 left">
-          <a href="/categories/被动收入投资组合/">被动收入投资组合净值: 1.53</a>
-        </div>
-        <div class="pure-u-1 pure-u-md-1-2 right">
           <span>网站总 PV: </span><span id="all-page-views"></span>
         </div>
-      </div>
-      <div class="pure-g">
-        <div class="pure-u-1 pure-u-md-1-2 left">
-          网站运行时间: <span id="site-run-days"></span> 天
-        </div>
         <div class="pure-u-1 pure-u-md-1-2 right">
-          数据更新时间: 2021.02.14
+          网站运行时间: <span id="site-run-days"></span> 天
         </div>
       </div>
     </div>
