--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -259,7 +259,8 @@ a[href^="#fn:"]:after{ content: ']' }
 
 .dashboard {
   font-size: 14px;
-  font-weight: 100;
+  text-shadow: 1px 1px #b1b1b133;
+  font-weight: 200;
   font-style: oblique;
   text-transform: lowercase;
   color: #cccccc;
