--- a/themes/hugo-coder/layouts/dev/single.html
+++ b/themes/hugo-coder/layouts/dev/single.html
@@ -44,6 +44,24 @@
         {{ $outContent := .Content | replaceRE $PATTERN_EMPTY_ALT $REPLACEMENT | replaceRE $PATTERN_ALT $REPLACEMENT | safeHTML }}
         {{ $outContent }}
 
+        <div style="color: #5c7080;font-size: small;font-style: italic;">
+          更新时间:
+          <!-- Calculate the age in days and months -->
+          {{ $ageDays := div (sub now.Unix .Page.Lastmod.Unix) 86400 }}
+          {{ $ageMonths := div (sub now.Unix .Page.Lastmod.Unix) 2592000 }}
+          <!-- Published today -->
+          {{ if eq $ageDays 0 }}
+              今日
+          <!-- Published in the last 31 days -->
+          {{ else if lt $ageDays 31 }}
+              {{ $ageDays }}天前
+          <!-- Published month(s) ago -->
+          {{ else }}
+              {{ $ageMonths }}个月前
+          {{ end }}
+           版本: <a href="https://github.com/madawei2699/bmpi.dev/commit/{{ .GitInfo.Hash }}">{{ .GitInfo.AbbreviatedHash }}</a>
+        </div>
+
         <div style="text-align: center;color: darkgray;">
           {{ if eq .Site.Language.Lang "zh-cn" }}
           <p>本作品采用<a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" style="color: darkgray;">知识共享署名-非商业性使用-禁止演绎 4.0 国际许可协议</a>进行许可</p>
