--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -6,6 +6,8 @@
       <a href="https://talk.bmpi.dev/">Talk</a>
       ⚔️
       <a href="/invest/">Invest</a>
+      ⚔️
+      <a href="https://tg.bmpi.dev">Think</a>
     </div>
     <div>
       <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
