--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -3,7 +3,7 @@
     <div style="margin-bottom: 10px;">
       <a href="https://wiki.bmpi.dev/">Wiki</a>
       ⚔️
-      <a href="https://talk.bmpi.dev/">Talk</a>
+      <a href="/talk/">Talk</a>
       ⚔️
       <a href="/invest/">Invest</a>
       ⚔️
