optimize image loading animation by AOS

--- a/themes/hugo-coder/assets/scss/_content.scss
+++ b/themes/hugo-coder/assets/scss/_content.scss
@@ -82,8 +82,20 @@
   width: 20rem;
   height: auto;
   border-radius: 50%;
+  opacity: 1;
+  animation: fadeIn 5s ease;
+  filter: blur(0.5px);
   @media only screen and (max-width : 768px) {
     width: 10rem;
+  }
+}
+
+@keyframes fadeIn{
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
   }
 }
 
