--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -1,50 +1,56 @@
 <section class="container centered">
   <div class="about">
     {{ with .Site.Params.avatarurl }}
-      <div class="avatar"><img src="{{ . | relURL }}" alt="马大伟"></div>
+      <div class="avatar" data-aos="fade-down" data-aos-offset="150" data-aos-delay="200" data-aos-duration="1000"><img src="{{ . | relURL }}" alt="马大伟"></div>
     {{ end }}
-    <h1>{{ .Site.Params.author }}</h1>
-    <h2>{{ .Site.Params.info1 }}<br>{{ .Site.Params.info2 }}<br>{{ .Site.Params.info3 }}</h2>
-    {{ with .Site.Params.social }}
-    <ul class="about-social">
-      {{ range sort .}}
-        {{ if .icon }}
-          <li>
-            <a href="{{ .url }}" rel="nofollow" aria-label="{{ .name }}" {{ if .rel }}rel="{{ .rel }}"{{ end }}>
-              <i class="{{ .icon }}" aria-hidden="true"></i>
-            </a>
-          </li>
-        {{ else }}
-          <li>
-            <a href="{{ .url }}" rel="nofollow" aria-label="{{ .name }}" {{ if .rel }}rel="{{ .rel }}"{{ end }}>{{ .name }}</a>
-          </li>
-        {{ end }}
-      {{ end }}
-    </ul>
-    {{ end }}
-    {{ if eq .Site.Language.Lang "zh-cn" }}
-    <div class="dashboard">
-      <div class="pure-g">
-        <div class="pure-u-1 pure-u-md-1-2 left">
-          共 {{ len .Site.RegularPages }} 篇文章
-        </div>
-        <div class="pure-u-1 pure-u-md-1-2 right">
-          {{$scratch := newScratch}}
-          {{ range .Site.RegularPages }}
-              {{$scratch.Add "total" (countwords .Content)}}
-          {{ end }}
-          总计 {{$scratch.Get "total" }} 字
-        </div>
-      </div>
-      <div class="pure-g">
-        <div class="pure-u-1 pure-u-md-1-2 left">
-          <span>网站总 PV: </span><span id="all-page-views"></span>
-        </div>
-        <div class="pure-u-1 pure-u-md-1-2 right">
-          网站运行时间: <span id="site-run-days"></span> 天
-        </div>
-      </div>
+    <div data-aos="fade-right" data-aos-offset="200" data-aos-delay="200" data-aos-duration="2000">
+      <h1>{{ .Site.Params.author }}</h1>
     </div>
-    {{ end }}
+    <div data-aos="fade-left" data-aos-offset="200" data-aos-delay="500" data-aos-duration="2000">
+      <h2>{{ .Site.Params.info1 }}<br>{{ .Site.Params.info2 }}<br>{{ .Site.Params.info3 }}</h2>
+    </div>
+    <div data-aos="fade-up" data-aos-offset="100" data-aos-delay="200" data-aos-duration="1500">
+      {{ with .Site.Params.social }}
+      <ul class="about-social">
+        {{ range sort .}}
+          {{ if .icon }}
+            <li>
+              <a href="{{ .url }}" rel="nofollow" aria-label="{{ .name }}" {{ if .rel }}rel="{{ .rel }}"{{ end }}>
+                <i class="{{ .icon }}" aria-hidden="true"></i>
+              </a>
+            </li>
+          {{ else }}
+            <li>
+              <a href="{{ .url }}" rel="nofollow" aria-label="{{ .name }}" {{ if .rel }}rel="{{ .rel }}"{{ end }}>{{ .name }}</a>
+            </li>
+          {{ end }}
+        {{ end }}
+      </ul>
+      {{ end }}
+      {{ if eq .Site.Language.Lang "zh-cn" }}
+      <div class="dashboard">
+        <div class="pure-g">
+          <div class="pure-u-1 pure-u-md-1-2 left">
+            共 {{ len .Site.RegularPages }} 篇文章
+          </div>
+          <div class="pure-u-1 pure-u-md-1-2 right">
+            {{$scratch := newScratch}}
+            {{ range .Site.RegularPages }}
+                {{$scratch.Add "total" (countwords .Content)}}
+            {{ end }}
+            总计 {{$scratch.Get "total" }} 字
+          </div>
+        </div>
+        <div class="pure-g">
+          <div class="pure-u-1 pure-u-md-1-2 left">
+            <span>网站总 PV: </span><span id="all-page-views"></span>
+          </div>
+          <div class="pure-u-1 pure-u-md-1-2 right">
+            网站运行时间: <span id="site-run-days"></span> 天
+          </div>
+        </div>
+      </div>
+      {{ end }}
+    </div>
   </div>
 </section>
