add heti lib to typeset the articles

--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -122,7 +122,7 @@ code {
   font-family: $code-font-family;
   font-size: 1.6rem;
   font-weight: 400;
-  background-color: $alt-bg-color;
+  background-color: rgba(255, 247, 0, 0.88);
   color: $fg-color;
   padding: 0.2rem 0.4rem 0.2rem 0.4rem;
 }
@@ -288,14 +288,26 @@ a[href^="#fn:"]:after{ content: ']' }
 
 .article-content {
   border: 1px solid lightgrey;
-  padding-right: 40px;
-  padding-left: 40px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  // font-family: lucida grande,lucida sans unicode,lucida,helvetica,hiragino sans gb,microsoft yahei,wenquanyi micro hei,sans-serif !important;
+  padding-right: 40px;;
+  padding-left: 40px;;
+  padding-top: 40px;;
+  padding-bottom: 40px;;
   margin-bottom: 20px;
+  max-width: none !important;
+  font-size: 18px !important;
+  line-height: 1.8 !important;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.32);
   @media only screen and (max-width : 768px) {
       border: none;
       padding: 0 0 0 0;
       margin-bottom: 0;
+      box-shadow: none;
+      font-size: 16px !important;
+      line-height: 1.6 !important;
   }
+}
+
+.heti blockquote {
+  background-color: #f7f7f7 !important;
 }
