add aos lib to animate articles

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -120,6 +120,8 @@
   {{ if or (hasPrefix .RelPermalink "/dev/") (hasPrefix .RelPermalink "/en/dev/") (hasPrefix .RelPermalink "/self/") (hasPrefix .RelPermalink "/en/self/") (hasPrefix .RelPermalink "/money/") (hasPrefix .RelPermalink "/en/money/") }}
   <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=600a642fe0b9b900111a7f08&product=inline-share-buttons' async='async'></script>
   <link rel="stylesheet" href="//unpkg.com/heti/umd/heti.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   {{ end }}
 
   {{ if eq .RelPermalink "/" }}
@@ -185,6 +187,10 @@
   <script>
     const heti = new Heti('.heti');
     heti.autoSpacing(); // 自动进行中西文混排美化和标点挤压
+
+    AOS.init({
+      disable: 'mobile'
+    });
   </script>
   {{ end }}
 
