add LXGW WenKai font

--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -305,7 +305,7 @@ a[href^="#fn:"]:after{ content: ']' }
 
 .article-content {
   border: 1px solid lightgrey;
-  // font-family: lucida grande,lucida sans unicode,lucida,helvetica,hiragino sans gb,microsoft yahei,wenquanyi micro hei,sans-serif !important;
+  font-family: "LXGW WenKai","Helvetica Neue",helvetica,arial,"Heti Hei",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
   padding-right: 40px;;
   padding-left: 40px;;
   padding-top: 40px;;
